Lisätty uusi TypeScript-projekti osaksi ratkaisua (solution).

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /AspNetWebDemo/.vs/AspNetWebDemo
 /AspNetWebDemo/AspNetWebDemo/bin/Debug/netcoreapp3.1
 /AspNetWebDemo/AspNetWebDemo/obj
+/AspNetWebDemo/ReactFront/node_modules
